# dict2any

./: README.md  pyproject.toml
.github/workflows/: publish.yaml
dict2any/: __about__.py  __init__.py  parse.py  parser.py
dict2any/parsers/: __init__.py  base_types.py  class_parser.py  dict.py  list.py  parser.py  tuple.py
tests/: conftest.py  test_any.py  test_base_types.py  test_class.py  test_dataclass.py  test_dict.py  test_jq_path.py  test_list.py  test_parse.py  test_parser.py  test_path.py  test_placeholder.py  test_tuple_parser.py  test_union.py
